# sphinx-needs-template

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile  README.md  write_redirect.py
docs/private/: README.md
docs/public/: _indices.md  conf.py  getting_started.md  index_complete.md  index_detail.md  index_overview.md
docs/public/reqs/: coverage.md  decisions.md  functional.md  glossary.md  nonfunctional.md  risks.md  schedule.md  tests.md
docs/public/reqs_gen/: classes.md  stories.md  usecases.md
docs/public/views/: index_back_yard.md  index_party_prep.md  index_schedule.md  index_schema.md
linkml/private/: README.md
linkml/public/data/: README.md  stories.yaml  usecases.yaml
linkml/public/schema/: needs.yaml
pictures/private/: README.md
pictures/public/: README.md
reqif/private/: README.md
reqif/public/: README.md  garden_sample.reqif
src/private/: README.md
src/public/garden_helper/: __init__.py  core.py
src/public/needs_from_linkml/: __init__.py  __main__.py  cli.py  converter.py
src/public/needs_to_jsonld/: __init__.py  cli.py  converter.py
src/public/reqif_bridge/: __init__.py  cli.py  converter.py
src/public/schema_to_needs/: __init__.py  cli.py  converter.py
tests/private/: README.md
tests/public/: conftest.py  test_garden_helper.py
